Fixing unintended alignment override introduced in 8d46937900a.

--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -126,15 +126,17 @@ a:active {
 	@extend .clear;
 }
 
-.comment-navigation .nav-previous,
-.paging-navigation .nav-previous,
-.post-navigation .nav-previous {
-	@extend .alignleft;
-	@extend button;
-}
-.comment-navigation .nav-next,
-.paging-navigation .nav-next,
-.post-navigation .nav-next {
-	@extend .alignright;
-	@extend button;
+#page {
+	.comment-navigation .nav-previous,
+	.paging-navigation .nav-previous,
+	.post-navigation .nav-previous {
+		@extend .alignleft;
+		@extend button;
+	}
+	.comment-navigation .nav-next,
+	.paging-navigation .nav-next,
+	.post-navigation .nav-next {
+		@extend .alignright;
+		@extend button;
+	}
 }
